# news2-pipeline

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: main.py  news2.py
tests/: test_api.py  test_news2.py
