[project]
name = "news2-pipeline"
version = "1.0.0"
description = "NEWS2 early-warning score API with a CI/CD pipeline"
requires-python = ">=3.11"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
